syntax = "proto3";

service FruitService {
	rpc GetList(GetListReq) returns (GetListRsp) {} 
	rpc RspError(GetListReq) returns (CommonRsp) {}
	rpc RspErrorCode(GetListReq) returns (CommonRsp) {}
}

message Fruit {
    string name = 1;
    string desc = 3; // 描述信息
    string pic = 4;
}

message GetListReq {
}

message GetListRsp {
    repeated Fruit fruits  = 1;
}

message CommonRsp {
}
